[gd_scene load_steps=5 format=3 uid="uid://c8sm6ujhqsf08"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_7t2xg"]
[ext_resource type="Theme" uid="uid://ceet3xcdh71wb" path="res://ui/menu_theme.tres" id="1_vs77m"]
[ext_resource type="PackedScene" uid="uid://dkamchyit13ym" path="res://ui/inventory_menu.tscn" id="2_nmfrs"]
[ext_resource type="PackedScene" uid="uid://bpwe8rwfohkvh" path="res://ui/inventory_slot.tscn" id="4_ipo1n"]

[node name="PauseMenu" type="Panel"]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7t2xg")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -397.5
offset_top = -146.5
offset_right = 397.5
offset_bottom = 146.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Buttons" type="PanelContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_vs77m")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Buttons"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Buttons/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PauseLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Buttons/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_vs77m")
text = "------- Pause -------"

[node name="ResumeButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vs77m")
text = "Resume"

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vs77m")
text = "Save"

[node name="LoadButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vs77m")
text = "Load"

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vs77m")
text = "Exit"

[node name="InventoryMenu" parent="PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_nmfrs")]
unique_name_in_owner = true
layout_mode = 2
slot_scene = ExtResource("4_ipo1n")

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Buttons/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Buttons/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Buttons/MarginContainer/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Buttons/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
